--- a/index.html
+++ b/index.html
@@ -20,35 +20,43 @@
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="assets/alchemy-logo.png"/>
+            <img class="math-gif" src="https://media2.giphy.com/media/BmmfETghGOPrW/giphy.gif?cid=ecf05e47d1108ea7cb271f483fca05a79b7f864c45e96918&rid=giphy.gif"/>
             <h2>
-                Welcome to Alchemy Bootstrap!
+                🤖 let's calulate! 🤖
             </h2>
 
-            <content>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis exercitationem?
-            </p>
-            <hr />
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis exercitationem?
-            </p>
+        <section> <h2>Addition</h2> 
+                <input id= "add1" type='number'> + <input id= "add2" type='number'> 
+                <br>
+                <button class="add-it" id="add-button"> = </button> 
+                <span id="sum-result"></span></br>
+                </section>
 
+        <section> <h2>Subtraction</h2> 
+                <input id= "sub1" type='number'> - <input id= "sub2" type='number'> 
+                <br>
+                <button class="subtract-it" id="sub-button"> = </button> 
+                <span id="sub-result"></span></br>
+                </section>
+
+        <section> <h2>Multiplication</h2> 
+                <input id= "mult1" type='number'> x <input id= "mult2" type='number'> 
+                <br>
+                <button class="multiply-it" id="mult-button"> = </button> 
+                <span id="multiply-result"></span></br>
+                </section>
+
+        <section> <h2>Division</h2> 
+                <input id= "div1" type='number'> / <input id= "div2" type='number'> 
+                <br>
+                <button class="divide-it" id="divide-button"> = </button> 
+                <span id="div-result"></span></br>
         </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
     </footer>
 
-    <script type="module" src="app.js"></script>
 </body>
-
+<script src="app.js"></script>
 </html>
