create permament location for gif

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section class="main-section">
-            <img class="math-gif" src="https://media2.giphy.com/media/BmmfETghGOPrW/giphy.gif?cid=ecf05e47d1108ea7cb271f483fca05a79b7f864c45e96918&rid=giphy.gif"/>
+            <img class="math-gif" src="assets/giphy.gif"/>
             <h2>
                 🤖 let's calulate! 🤖
             </h2>
